--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -8,7 +8,7 @@
 				<div class="title">Все букеты</div>
 				<div class="catalog__block" style="display: flex; justify-content: space-between; flex-wrap: wrap;">					
 					{% for bouquet in bouquets %}
-					<a href="{% url 'card' bouquet.id %}" style="text-decoration: none; color: #ABABAB;">
+					<a href="{% url 'card' bouquet.id %}" class="show-item" style="text-decoration: none; color: #ABABAB;">
 						<div class="recommended__elems ficb" style="background: url({{ bouquet.photo.url }}) no-repeat center bottom / cover;">
 							<div class="recommended__block ">
 								<div class="recommended__block_elems ficb">
@@ -20,10 +20,32 @@
 					</a>
 					{% endfor %}
 					</div>
-					<button class="btn largeBtn catalog__btn">Показать ещё</button>
+					{% if count_items > 6 %}
+						<button id="show1" class="btn largeBtn catalog__btn">Показать ещё</button>
+					{% endif %}
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<script>
+		document.addEventListener('DOMContentLoaded', function() {
+			let items = document.querySelectorAll('.show-item');
+			if (items.length > 6) {
+				for(let i=6; i<items.length; i++) {
+					items[i].style.display = "none";
+				}
+			}
+		});
+
+		document.getElementById('show1').addEventListener('click', function() {
+			let items = document.querySelectorAll('.show-item');
+			let btn = document.getElementById('show1');
+			for(let i=6; i<items.length; i++) {
+				items[i].style.display = "block";
+			}
+			btn.style.display = "none";
+		});
+	</script>
   {% endblock first-section %}
   {% block contacts %}{% endblock contacts %}
