--- a/floristapp/templates/orders.html
+++ b/floristapp/templates/orders.html
@@ -6,6 +6,7 @@
    <table class="table table-responsive">
     <tr>
       <th>ID</th>
+      <th>Создан</th>
       <th>Статус</th>
       <th>Букет</th>
       <th>Стоимость</th>
@@ -20,8 +21,9 @@
     {% for order in orders %}
       <tr>
         <td>{{ order.id }}</td>
+        <td>{{ order.created_at }}</td>
         <td>{{ order.status }}</td>
-        <td>{{ order.bouquet_name }}</td>
+        <td>{{ order.bouquet.name }}</td>
         <td>{{ order.price }} руб.</td>
         <td>{{ order.client_name }}</td>
         <td>{{ order.phone }}</td>
@@ -29,7 +31,7 @@
         <td>{{ order.delivery_window }}</td>
         <td>{{ order.comment }}</td>               
         <td>
-          {% if order.status == 'создан' or order.status == 'собирается' %}
+          {% if order.is_for_florist_statuses and user.is_florist %}
             <form method="post" action="./{{ order.id }}">
             {% csrf_token %}
             {% if order.status == 'создан' %}
@@ -39,7 +41,7 @@
             {% endif %}
           </form>
           {% else %}
-            Передан на доставку
+            ---
           {% endif %}
         </td>
       </tr>
